[project]
name = "concierge"
version = "0.0.1"
description = "Worker pool over headless Claude sessions (prototype; see SPEC.md)"
requires-python = ">=3.10"
dependencies = ["claude-agent-sdk>=0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["concierge"]
